Pagina Beatles estructura-2/HTML

--- a/Archivo.Html
+++ b/Archivo.Html
@@ -36,7 +36,40 @@
         </ul>
         <img src="Img usadas/Img Aside.jpg" alt="The Beatles">
     </Aside>
-    <div></div>
+    <div>
+        <article>
+            <section>
+                <div>
+                    <img src="Img usadas/John Lennon.jpg" alt="John Lennon">
+                    <a href="https://es.wikipedia.org/wiki/John_Lennon">John Lennon</a>
+                </div>
+                <p></p>
+            </section>
+            <section>
+                <div>
+                    <img src="Img usadas/Paul McCartney.jpg" alt="Paul McCartney">
+                    <a href="https://es.wikipedia.org/wiki/Paul_McCartney">Paul McCartney</a>
+                </div>
+                <p></p>
+            </section>
+        </article>
+        <article>
+            <section>
+                <div>
+                    <img src="Img usadas/Ringo starr.jpg" alt="Ringo Starr">
+                    <a href="https://es.wikipedia.org/wiki/Ringo_Starr">Ringo Starr</a>
+                </div>
+                <p></p>
+            </section>
+            <section>
+                <div>
+                    <img src="Img usadas/George Harrison.jpg" alt="George Harrison">
+                    <a href="https://es.wikipedia.org/wiki/George_Harrison">George Harrison</a>
+                </div>
+                <p></p>
+            </section>
+        </article>
+    </div>
    </div>
 
    <footer>
