--- a/Archivo.Html
+++ b/Archivo.Html
@@ -36,7 +36,7 @@
         </ul>
         <img src="Img usadas/Img Aside.jpg" alt="The Beatles">
     </Aside>
-    <div>
+    <div class="contenedor">
         <article>
             <section>
                 <div>
