--- a/Archivo.Html
+++ b/Archivo.Html
@@ -43,14 +43,14 @@
                     <img src="Img usadas/John Lennon.jpg" alt="John Lennon">
                     <a href="https://es.wikipedia.org/wiki/John_Lennon">John Lennon</a>
                 </div>
-                <p></p>
+                <p>Artista, músico, cantautor, actor, activista, compositor, productor, escritor y pacifista británico</p>
             </section>
             <section>
                 <div>
                     <img src="Img usadas/Paul McCartney.jpg" alt="Paul McCartney">
                     <a href="https://es.wikipedia.org/wiki/Paul_McCartney">Paul McCartney</a>
                 </div>
-                <p></p>
+                <p>Cantautor, compositor, músico, multiinstrumentista, escritor, activista, pintor y actor británico</p>
             </section>
         </article>
         <article>
@@ -59,20 +59,22 @@
                     <img src="Img usadas/Ringo starr.jpg" alt="Ringo Starr">
                     <a href="https://es.wikipedia.org/wiki/Ringo_Starr">Ringo Starr</a>
                 </div>
-                <p></p>
+                <p>Músico, multiinstrumentista, cantante, compositor y actor británico</p>
             </section>
             <section>
                 <div>
                     <img src="Img usadas/George Harrison.jpg" alt="George Harrison">
                     <a href="https://es.wikipedia.org/wiki/George_Harrison">George Harrison</a>
                 </div>
-                <p></p>
+                <p>Músico multiinstrumentista, compositor, cantautor, productor musical, productor cinematográfico, actor, filántropo, activista pacifista, ecologista, guitarrista y cantante británico</p>
             </section>
         </article>
     </div>
    </div>
 
    <footer>
+    <a href="https://www.instagram.com/thebeatles/?utm_source=ig_web_button_share_sheet&igshid=ODE2OTA4Y2Y1MQ==" target="_blank"><img src="Img usadas/icons8-instagram-48.png" alt="instagram"></a>
+    <a href="https://www.thebeatles.com/" target="_blank"><img id="LogoPagina" src="Img usadas/The-Beatles-logotipo.jpg" alt="logothebeatles"></a>
    </footer>
 
 </body>
